Adding redirect, as iPython Notebook redirect isn't working.

--- a/etc/nginx/port80.d/ipynb.conf
+++ b/etc/nginx/port80.d/ipynb.conf
@@ -1,3 +1,7 @@
+location = /ipynb/ {
+  rewrite ^(.*)$ /ipynb/tree redirect;
+}
+
 location /ipynb/ {
   proxy_pass  http://127.0.0.1:8888/ipynb/;
   proxy_http_version 1.1;
