Fixing inline image display with matplotlib/nltk.

--- a/etc/supervisord.d/ipynb.conf
+++ b/etc/supervisord.d/ipynb.conf
@@ -1,5 +1,5 @@
 [program:ipynb]
-command=/opt/python/bin/ipython notebook --no-browser
+command=/opt/python/bin/ipython notebook --no-browser --pylab inline
 environment=IPYTHONDIR=/opt/ipython/
 directory=/home/researcher
 user=researcher
