--- a/etc/nginx/port80.d/ipynb.conf
+++ b/etc/nginx/port80.d/ipynb.conf
@@ -5,4 +5,5 @@ location /ipynb/ {
   proxy_set_header Origin "http://localhost:8888";
   proxy_set_header Upgrade $http_upgrade;
   proxy_set_header Connection $connection_upgrade;
+  proxy_read_timeout 1d; # Websockets require long read timeout
 }
