Adding NLTK and setting up environment variables from shell.

--- a/etc/supervisord.d/ipynb.conf
+++ b/etc/supervisord.d/ipynb.conf
@@ -1,6 +1,6 @@
 [program:ipynb]
-command=/opt/python/bin/ipython notebook --no-browser --pylab inline
-environment=IPYTHONDIR=/opt/ipython/,HOME=/home/researcher
+command=bash -l -c "/opt/python/bin/ipython notebook --no-browser --pylab inline"
+environment=HOME=/home/researcher,USER=researcher
 directory=/home/researcher
 user=researcher
 autorestart=true
