--- a/etc/nginx/port80.d/ipynb.conf
+++ b/etc/nginx/port80.d/ipynb.conf
@@ -1,5 +1,5 @@
 location /ipynb/ {
-  proxy_pass  http://127.0.0.1:8888/ipynb/;
+  proxy_pass  http://127.0.0.1:8888;
   proxy_http_version 1.1;
   proxy_set_header Host "localhost:8888";
   proxy_set_header Origin "http://localhost:8888";
