Removing pylab inline.

--- a/etc/supervisord.d/ipynb.conf
+++ b/etc/supervisord.d/ipynb.conf
@@ -1,5 +1,5 @@
 [program:ipynb]
-command=bash -l -c "/opt/python/bin/ipython notebook --no-browser --pylab inline"
+command=bash -l -c "/opt/python/bin/ipython notebook --no-browser"
 environment=HOME=/home/researcher,USER=researcher
 directory=/home/researcher
 user=researcher
