Adding tree rendering tools for NLTK

--- a/etc/supervisord.d/ipynb.conf
+++ b/etc/supervisord.d/ipynb.conf
@@ -1,6 +1,6 @@
 [program:ipynb]
 command=bash -l -c "/opt/python/bin/ipython notebook --no-browser"
-environment=HOME=/home/researcher,USER=researcher
+environment=HOME=/home/researcher,USER=researcher,DISPLAY=:99
 directory=/home/researcher
 user=researcher
 autorestart=true
